# NIMPipe

./: .gitignore  Cargo.toml  README.md
.commandcode/taste/: taste.md
assets/: default_models.toml
assets/ui/: app.js  index.html  style.css
graphify-out/: .graphify_labels.json  .graphify_python  .graphify_root  GRAPH_REPORT.md  cost.json  graph.html  graph.json  manifest.json
src/: cli.rs  config.rs  logging.rs  main.rs  models.rs  proxy.rs  server.rs  transform.rs  transform_response.rs
